--- a/githubtarea1/nbproject/project.properties
+++ b/githubtarea1/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/githubtarea1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.postgresql-9.4.1209.jar=libs\\postgresql-9.4.1209.jar
+file.reference.sqljdbc42.jar=Libreria\\sqljdbc42.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-9.4.1209.jar}
+    ${file.reference.postgresql-9.4.1209.jar}:\
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
